# presencing

./: .gitignore  README.md  README.zh.md  SETUP.md  package.json
python/: README.md  pyproject.toml
python/src/presencing/: __init__.py
