[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "presencing"
version = "0.0.1"
description = "A framework for building AI agents that are present, not just reactive."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Xia Tao" }]
keywords = ["ai", "agent", "llm", "presence", "framework", "daemon", "proactive", "persona"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/presencing/presencing"
Repository = "https://github.com/presencing/presencing"
Issues = "https://github.com/presencing/presencing/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/presencing"]
